# smart-house-web

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20230319114732_create_schema.down.sql  20230319114732_create_schema.up.sql
src/: main.rs
src/device/: mod.rs  socket.rs  thermometer.rs  web.rs
src/house/: mod.rs  web.rs
src/room/: mod.rs  web.rs
