[package]
name = "smart-house-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
tokio = { version = "1.26.0", features = ["full"] }
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
serde = {version = "1.0.157", features = ["derive"]}
serde_json = "1.0.94"
dotenv = "0.15.0"
rand = "0.8.5"
